# nrf_acceldumper

./: .gitignore  Cargo.toml  uf2_flash.sh
.cargo/: config.toml
app/: pyproject.toml
app/acceldumper_app/: __init__.py  __main__.py
src/: bno055.rs  main.rs  mpu6050.rs
