[package]
name = "nrf_acceldumper"
version = "0.1.0"
authors = ["Erik Tollerud <erik.tollerud@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
embedded-hal = "0.2.7"
nrf52840-hal = "0.16.0"
panic-persist = "0.3.0"
#panic-halt = "0.2.0"
usb-device = "0.2.9"
usbd-serial = "0.1.1"
heapless = "0.7.16"
smart-leds = "0.3"
apa102-spi = "0.3.2"
micromath = "2.1.0"