[tool.poetry]
name = "acceldumper_app"
version = "0.1.0"
description = ""
authors = ["Erik Tollerud <erik.tollerud@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.*"
pynput = "^1.7.6"
evdev = "^1.6.1"
jupyterlab = "^4.0.8"
ipykernel = "^6.26.0"
matplotlib = "^3.8.1"
scipy = "^1.11.3"
serial = "^0.0.97"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
